# pleblottery

./: .gitignore  .gitmodules  Cargo.toml  LICENCE-MIT  README.md  config.toml  flake.nix  regtest.sh  shell.nix  stratum-message-generator.sh
.github/workflows/: rustfmt.yml  tests.yml
doc/: tokio-console.md
scripts/: env.sh  regtest.sh  tokio_console.sh
src/: cli.rs  config.rs  lib.rs  main.rs  service.rs  state.rs  utils.rs
src/lib/: mod.rs
src/lib/sv1/: bitcoin.rs  config.rs  handler.rs  mod.rs  service.rs
src/sv2_handlers/: mining_server_handler.rs  mod.rs  template_distribution_client_handler.rs
src/web/: server.rs
src/web/routes/: api.rs  html.rs
tests/: test_connection_with_sv2_minig_device.rs  test_load_config_from_disk.rs  test_shared_state_integration.rs  test_submit_shares_and_submit_solution.rs  test_template_provider_connection.rs  test_without_template_provider.rs
tests/common/: mod.rs
tests/test_data/: bad_address.toml  good_config.toml
