[package]
name = "pleblottery"
authors = [ "plebhash <plebhash@proton.me>" ]
version = "0.1.0"
edition = "2021"
description = "a hashrate aggregator for a pleb-friendly and fully sovereign solo/lottery Bitcoin mining experience"

[lib]
name = "pleblottery"
path = "src/lib/mod.rs"

[dependencies]
# async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
async-std = { version = "1.12.0", features = ["attributes"] }
async-compat = "0.2.1"
futures = "0.3.31"

# tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

# CLI
clap = { version = "4.3.14", features = ["env", "default", "derive"]}
config = { version = "0.13.3", features = ["toml"] }
serde = "1.0.164"
serde_json = "1.0.96"

# error handling
anyhow = "1.0.71"

# Stratum V1
sv1_api = "1.0.1"

# Bitcoin
bitcoin = "0.32.3"
bitcoincore-rpc = "0.19.0"
bitcoincore-rpc-json = { version = "0.19.0" }

# misc
hex = "0.4.3"

# tokio debugging
console-subscriber = { version = "0.4.1", optional = true }

[features]
default = []
tokio_debug = ["console-subscriber"]