[package]
name = "pleblottery"
authors = [
    "plebhash <plebhash@proton.me>",
    "Lucas Balieiro <github@lucasbalieiro.dev>",
]
version = "0.1.0"
edition = "2021"
description = "a hashrate aggregator for a pleb-friendly and fully sovereign solo/lottery Bitcoin mining experience"

[lib]
path = "src/lib.rs"

[dependencies]
tower-stratum = { git = "https://github.com/plebhash/tower-stratum.git", branch = "sri-main" }
tokio = { version = "1.44.1", features = ["full", "tracing"] }
tokio-util = "0.7.15"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
axum = "0.8.3"
tower-http = { version = "0.6.2", features = ["fs"] }
axum-htmx = "0.7.0"
bitcoin = "0.32.6"

[dev-dependencies]
integration_tests_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
binary_codec_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
once_cell = "1.21.3"
reqwest = "0.12.15"
sv2-cpu-miner = { git = "https://github.com/plebhash/sv2-cpu-miner.git", branch = "main" }
